--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html, body {
 	height: 100%;
 	width: 100%;
 	font-family: 'Muli', serif;
+    background-color: #d3d3d3;
 }
 
 .set-link {
@@ -13,10 +14,18 @@ div, footer, img {
 	//border-style: solid;border-width: 1px;
 }
 
-.logo-div {
-	width: 50%;
+.intro-div {
+    background-color: white;
+	width: 100%;
     margin-left: auto;
     margin-right: auto;
+}
+
+.intro-article {
+    width: 75%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-bottom: 1em;
 }
 
 .portfolio {
@@ -26,13 +35,13 @@ div, footer, img {
 }
 
 .portfolio-set {
+    background-image: url('images/transpBlack.png');
     width: 100%;
+    height: 20em;
     overflow: hidden;
-    margin-top: 2em;
-    margin-bottom: 2em;
+    margin-top: 8em;
     margin-left: auto;
     margin-right: auto;
-    text-align: center;
     border-width: 0.1em;
     border-top-style: solid;
     border-bottom-style: solid;
@@ -40,16 +49,34 @@ div, footer, img {
 
 .portfolio-padding {
     float: left;
-    width: 15%;
-    height: 15em;
+    width: 1%;
+    height: 20em;
 }
 
 .portfolio-image {
+    background-image: url('images/transpBlack.png');
     background-repeat: repeat-x;
     background-attachment: fixed;
-    background-position: top;
+    background-position: left top;
     background-size: contain;
+    border-style: solid;
+    border-width: 0em thin 0em 0em;
     float: left;
-    height: 15em;
-    width: 11.6%;
+    height: 20em;
+    width: 16.33%;
+}
+
+.portfolio-title {
+    position: absolute;
+    width: 100%;
+    font-size: 8em;
+    text-align: right;
+    height: 100%;
+    vertical-align: text-bottom;
+    color: white;
+    text-shadow:
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;     
 }
