--- a/style.css
+++ b/style.css
@@ -3,80 +3,143 @@ html, body {
 	height: 100%;
 	width: 100%;
 	font-family: 'Muli', serif;
-    background-color: #d3d3d3;
+
 }
 
 .set-link {
 	cursor: pointer;
 }
 
-div, footer, img {
-	//border-style: solid;border-width: 1px;
+header {
+    background-color: white;
+    width: 100%;
+    padding-bottom: 1em;
+    max-height: 9em;
+    position: fixed;
+    top: 0em;
+    left: 0em;
+    z-index: 100;
+    overflow: hidden;
+    box-shadow: -1px 1px 10px #888888;    
+}
+
+.logo-div {
+    background-color: white;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.logo-img {
+    width: 50%;
+    max-height: 110px;
+    max-width: 512px;
+}
+
+.social-buttons-div {
+    width: 50%;
+    float: right;
+    text-align: right;
+    font-size: 0.75em;
+    padding-top: 1em;
 }
 
 .intro-div {
-    background-color: white;
+    background-color: #f4f2f3;
 	width: 100%;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 15em;
+    padding-top: 2em;
+    padding-bottom: 2em;
+    position: relative;
+    top: 10em;
 }
 
 .intro-article {
     width: 75%;
     margin-right: auto;
     margin-left: auto;
-    padding-bottom: 1em;
+    text-align: center;
+    font-size: 7em;
+    font-style: italic;
+    font-family: 'Pacifico';
 }
 
 .portfolio {
-    width: 100%;
+    width: 75%;
     margin-left: auto;
     margin-right: auto;
 }
 
 .portfolio-set {
-    background-image: url('images/transpBlack.png');
-    width: 100%;
+    background-image: url('images/swirl_pattern.png');
+    background-attachment: fixed;
     height: 20em;
+    width: 100%;
     overflow: hidden;
-    margin-top: 8em;
+    margin-top: 4em;
+    margin-bottom: 4em;
     margin-left: auto;
     margin-right: auto;
-    border-width: 0.1em;
-    border-top-style: solid;
-    border-bottom-style: solid;
 }
 
-.portfolio-padding {
-    float: left;
-    width: 1%;
-    height: 20em;
+.portfolio-title {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;    
+    font-size: 3em;
+    text-align: right;
+    vertical-align: text-bottom;
+    text-transform: uppercase;
+    color: lightgrey;    
+    text-shadow:
+    -1px -1px 1px #000,
+    1px -1px 1px #000,
+    -1px 1px 1px #000,
+    1px 1px 1px #000;      
+}
+
+.portfolio-images-box {
+    height: 15em;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
 }
 
 .portfolio-image {
-    background-image: url('images/transpBlack.png');
     background-repeat: repeat-x;
     background-attachment: fixed;
     background-position: left top;
     background-size: contain;
-    border-style: solid;
-    border-width: 0em thin 0em 0em;
+    height: 15em;
+    width: 10em;      
     float: left;
-    height: 20em;
-    width: 16.33%;
+    margin-left: 0.25em;
+    margin-right: 0.25em;
 }
 
-.portfolio-title {
-    position: absolute;
-    width: 100%;
-    font-size: 8em;
-    text-align: right;
-    height: 100%;
-    vertical-align: text-bottom;
-    color: white;
-    text-shadow:
-        -1px -1px 0 #000,
-        1px -1px 0 #000,
-        -1px 1px 0 #000,
-        1px 1px 0 #000;     
+@media screen and (max-width: 799px){
+    .portfolio-set { width: 31.5em; }
+}
+
+@media screen and (min-width: 800px){
+    .portfolio-set { width: 42em; }
+}
+
+@media screen and (min-width: 1000px){
+    .portfolio-set { width: 52.5em; }
+}
+
+@media screen and (min-width: 1350px){
+    .portfolio-set { width: 63em; }
+}
+
+footer {
+    text-align: center;
+    width: 50%;
+    margin: auto;
+    font-size: 0.9em;
+    padding: 1em;
 }
