--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
+
 html, body {
 	margin: 0;
 	height: 100%;
 	width: 100%;
 	font-family: 'Muli', serif;
-
 }
 
 .set-link {
@@ -11,16 +11,15 @@ html, body {
 }
 
 header {
+    position: fixed;
     background-color: white;
     width: 100%;
     padding-bottom: 1em;
     max-height: 9em;
-    position: fixed;
     top: 0em;
     left: 0em;
     z-index: 100;
     overflow: hidden;
-    box-shadow: -1px 1px 10px #888888;    
 }
 
 .logo-div {
@@ -33,7 +32,9 @@ header {
 .logo-img {
     width: 50%;
     max-height: 110px;
+    min-height: 70px;
     max-width: 512px;
+    min-width: 324px;
 }
 
 .social-buttons-div {
@@ -44,24 +45,26 @@ header {
     padding-top: 1em;
 }
 
-.intro-div {
-    background-color: #f4f2f3;
+.hero-div {
+    background-image: url('images/hero-image.jpg'); 
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: top; 
 	width: 100%;
+    height: 35em;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 15em;
-    padding-top: 2em;
-    padding-bottom: 2em;
-    position: relative;
-    top: 10em;
+    padding-top: 9em;
 }
 
-.intro-article {
+.hero-statement {
+    color: white;
     width: 75%;
     margin-right: auto;
     margin-left: auto;
+    margin-top: 2em;
     text-align: center;
-    font-size: 7em;
+    font-size: 9em;
     font-style: italic;
     font-family: 'Pacifico';
 }
@@ -74,8 +77,7 @@ header {
 
 .portfolio-set {
     background-image: url('images/swirl_pattern.png');
-    background-attachment: fixed;
-    height: 20em;
+    height: 30em;
     width: 100%;
     overflow: hidden;
     margin-top: 4em;
@@ -85,9 +87,10 @@ header {
 }
 
 .portfolio-title {
-    width: 100%;
+    width: 98%;
     margin-left: auto;
-    margin-right: auto;    
+    margin-right: auto; 
+    padding-right: 2%;   
     font-size: 3em;
     text-align: right;
     vertical-align: text-bottom;
@@ -101,7 +104,7 @@ header {
 }
 
 .portfolio-images-box {
-    height: 15em;
+    height: 25em;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -110,18 +113,31 @@ header {
 
 .portfolio-image {
     background-repeat: repeat-x;
-    background-attachment: fixed;
-    background-position: left top;
-    background-size: contain;
-    height: 15em;
+    background-size: cover;
+    height: 25em;
     width: 10em;      
     float: left;
+    margin-top: 0.25em;
     margin-left: 0.25em;
     margin-right: 0.25em;
 }
 
+footer {
+    background-image: url('images/swirl_pattern.png');   
+    text-align: center;
+    width: 100%;
+    height: 7em;
+    margin: auto;
+    font-size: 1em;
+    padding-top: 5em;
+}
+
 @media screen and (max-width: 799px){
-    .portfolio-set { width: 31.5em; }
+    .hero-statement { font-size: 5em; margin-top: 1em; }
+    .hero-div { height: 15em; }
+    .portfolio-set { width: 31em; height: 18em; }
+    .portfolio-image { width: 15em; height: 15em; }
+    .portfolio-title { font-size: 2em; }
 }
 
 @media screen and (min-width: 800px){
@@ -134,12 +150,4 @@ header {
 
 @media screen and (min-width: 1350px){
     .portfolio-set { width: 63em; }
-}
-
-footer {
-    text-align: center;
-    width: 50%;
-    margin: auto;
-    font-size: 0.9em;
-    padding: 1em;
 }
