--- a/style.css
+++ b/style.css
@@ -122,6 +122,75 @@ header {
     margin-right: 0.25em;
 }
 
+.slider {
+    position: fixed;
+    top: 5em;
+    z-index: 50;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    padding-top: 5em;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+.hidden-slider {
+    display: none;
+}
+
+.slider-image-div {
+    z-index: 51;
+    width: 75%;
+    height: 100%;
+    max-height: 30em;
+    margin-left: auto;
+    margin-right: auto;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    overflow: hidden;
+}
+
+.slider-control {
+    z-index: 52;
+    padding: 1em;
+    width: 7em;
+    margin-left: auto;
+    margin-right: auto;    
+}
+
+.arrow-left {
+	width: 0; 
+	height: 0; 
+	border-bottom: 1em solid transparent;
+	border-top: 1em solid transparent; 	
+	border-right: 1em solid purple;
+    margin-right: 0.5em;
+    cursor: pointer;
+    float: left;  
+}
+
+.arrow-right {
+	width: 0; 
+	height: 0; 
+	border-top: 1em solid transparent;
+	border-bottom: 1em solid transparent;	
+	border-left: 1em solid purple;
+    margin-right: 0.5em;
+    cursor: pointer;
+    float: left;
+}
+
+.close-button {
+    cursor: pointer;
+    color: purple;
+    font-size: 1.25em;
+    text-align: center;
+    vertical-align: bottom;
+    float: left;
+}
+
 footer {
     background-image: url('images/swirl_pattern.png');   
     text-align: center;
@@ -138,6 +207,7 @@ footer {
     .portfolio-set { width: 31em; height: 18em; }
     .portfolio-image { width: 15em; height: 15em; }
     .portfolio-title { font-size: 2em; }
+    .close-button { font-size: 1em; }
 }
 
 @media screen and (min-width: 800px){
